syntax = "proto3";
import "google/protobuf/any.proto";

package ChainCost;

import "chain-cost-service/native-token.proto";
import "chain-cost-service/estimate-gas.proto";

service ChainCost {
    rpc GetTokenPrice(NativeToken.GetNativeTokenInput) returns (NativeToken.GetNativeTokenOutput){};
    rpc GetPublicEstFee(EstimateGas.GetPublicEstFeeInput)returns (EstimateGas.GetPublicEstFeeOutput){};
    rpc GetExecuteEstFee(EstimateGas.GetExecuteEstGeeInput) returns (EstimateGas.GetExecuteEstFeeOutput) {};
}

